Migrate core build components from replay docs.

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ import { Image } from "astro:assets";
       <li><a href="/">Hardware</a></li>
       <li><a href="/blog/">Blog</a></li>
       <li><a href="https://docs.fpgaarcade.com/">Docs</a></li>
-      <li><a href="https://build.fpgaarcade.com/releases">Releases</a></li>
+      <li><a href="/releases">Releases</a></li>
       <li>
         <a href="https://github.com/FPGAArcade/">
           <GithubIcon title="FPGAArcade GitHub" style="fill: white;" />
