--- a/src/pages/releases/[platform]/[core].astro
+++ b/src/pages/releases/[platform]/[core].astro
@@ -1,5 +1,5 @@
 ---
-import type { InferGetStaticParamsType, InferGetStaticPropsType, GetStaticPaths, GetStaticPathsResult } from "astro";
+import type { InferGetStaticPropsType, GetStaticPaths } from "astro";
 import type { Build, Platform } from "@lib/replay-api.ts";
 
 import * as Consts from "src/constants.ts";
@@ -11,7 +11,7 @@ import CoreCard from "@components/builds/CoreCard.astro";
 import PlatformFilter from "@components/builds/PlatformFilter.astro";
 
 export const getStaticPaths = (async () => {
-  const paths: GetStaticPathsResult = []
+  const paths = []
 
   const platforms: Array<Platform> = await (await fetch(`${Consts.BASE_URL_REPLAY_API}/platforms/`)).json();
     
@@ -30,13 +30,12 @@ export const getStaticPaths = (async () => {
   }
 
   return paths
-})
+}) satisfies GetStaticPaths;
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
-type Params = InferGetStaticParamsType<typeof getStaticPaths>;
 
-const { platform, core } = Astro.params as Params;
-const { builds, platforms } = Astro.props as Props;
+const { platform } = Astro.params;
+const { builds, platforms } = Astro.props;
 
 ---
 <Layout title="Core Releases">
@@ -55,7 +54,6 @@ const { builds, platforms } = Astro.props as Props;
             <CoreBuild core={build}></CoreBuild>            
           ))
         }
-        
       </article>      
     </section>
   </main>
