--- a/src/pages/releases/index.astro
+++ b/src/pages/releases/index.astro
@@ -1,22 +1,10 @@
 ---
 import * as Consts from "src/constants"
-import Layout from "@layouts/Layout.astro";
-
-import PlatformFilter from "@components/builds/PlatformFilter.astro";
+import LayoutReleases from "@layouts/LayoutReleases.astro";
 
 const res = await fetch(`${Consts.BASE_URL_REPLAY_API}/platforms/`)
 const platforms = await res.json()
 ---
 
-<Layout title="Core Releases">
-  <main>
-    <section>
-      <div class="section-header underlined">
-        <h1>Core Releases</h1>
-      </div>
-      <!-- TODO: [Gary] Common layout for releases page -->
-      <!-- TODO: [Gary] Show image based platform selection options with link to platform route -->
-      <PlatformFilter platforms={platforms} selectedPlatformID={null}></PlatformFilter>
-    </section>
-  </main>
-</Layout>
+<LayoutReleases title="Core Releases" platforms={platforms}>
+</LayoutReleases>
