--- a/src/components/builds/PlatformView.astro
+++ b/src/components/builds/PlatformView.astro
@@ -1,5 +1,7 @@
 ---
 import * as Consts from "src/constants";
+import type {Build} from "@lib/replay-api.ts"
+
 import CoreCard from "./CoreCard.astro";
 import {getLatestBuildPerCore} from "@lib/replay-api.ts"
 
