Disable pre-render for release pages.

--- a/src/pages/releases/index.astro
+++ b/src/pages/releases/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import * as Consts from "src/constants"
 import LayoutReleases from "@layouts/LayoutReleases.astro";
 
