--- a/src/pages/releases/[platform]/index.astro
+++ b/src/pages/releases/[platform]/index.astro
@@ -1,4 +1,6 @@
 ---
+export const prerender = false;
+
 import type { InferGetStaticPropsType, GetStaticPaths } from "astro";
 import type { Platform } from "@lib/replay-api.ts";
 
