--- a/src/pages/releases/[platform]/index.astro
+++ b/src/pages/releases/[platform]/index.astro
@@ -9,17 +9,21 @@ import LayoutReleases from "@layouts/LayoutReleases.astro";
 
 import PlatformView from "@components/builds/PlatformView.astro";
 
-export const getStaticPaths = (async () => {
-  const res = await fetch(`${Consts.BASE_URL_REPLAY_API}/platforms/`);
-  const platforms: Array<Platform> = await res.json();
+// Static render version - Left for now whilst testing SSR 
+// export const getStaticPaths = (async () => {
+//   const res = await fetch(`${Consts.BASE_URL_REPLAY_API}/platforms/`);
+//   const platforms: Array<Platform> = await res.json();
 
-   return platforms.map(platform => ({params: {platform: platform.id}, props: {platforms: platforms}}))
-}) satisfies GetStaticPaths;
+//    return platforms.map(platform => ({params: {platform: platform.id}, props: {platforms: platforms}}))
+// }) satisfies GetStaticPaths;
 
-type Props = InferGetStaticPropsType<typeof getStaticPaths>;
+// pre-render false testing
+const res = await fetch(`${Consts.BASE_URL_REPLAY_API}/platforms/`);
+const platforms: Array<Platform> = await res.json();
+
+// type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { platform } = Astro.params;
-const { platforms } = Astro.props;
 ---
 
 <LayoutReleases title="Core Releases" platforms={platforms} selectedPlatform={platform}>
