--- a/src/pages/releases/[platform]/[core].astro
+++ b/src/pages/releases/[platform]/[core].astro
@@ -48,7 +48,7 @@ const builds: Array<Build> = await (
   )
 ).json();
 
-Astro.response.headers.set('Cache-Control', 'public, maxage=360, s-maxage=3600, stale-while-revalidate=86400');
+Astro.response.headers.set('Cache-Control', 'public, max-age=360, s-maxage=3600, stale-while-revalidate=86400');
 ---
 
 <LayoutReleases
