--- a/src/pages/releases/[platform]/index.astro
+++ b/src/pages/releases/[platform]/index.astro
@@ -25,7 +25,7 @@ const platforms: Array<Platform> = await res.json();
 
 const { platform } = Astro.params;
 
-Astro.response.headers.set('Cache-Control', 'public, max-age=360, s-maxage=3600, stale-while-revalidate=86400');
+Astro.response.headers.set('CDN-Cache-Control', 'public, s-maxage=3600, stale-while-revalidate=86400');
 ---
 
 <LayoutReleases title="Core Releases" platforms={platforms} selectedPlatform={platform}>
