--- a/src/pages/blog/[...category]/[...page].astro
+++ b/src/pages/blog/[...category]/[...page].astro
@@ -10,10 +10,10 @@ import type { Categories } from "@layouts/LayoutBlog.astro";
 
 export const getStaticPaths = (async ({ paginate }) => {
   const posts = (await getCollection("posts")).sort(
-    (a, b) => b.data.created.getTime() - a.data.created.getTime()
+    (a, b) => b.data.created.getTime() - a.data.created.getTime(),
   );
   const categories = [...posts.map((post) => post.data.categories).flat()].sort(
-    (a, b) => a.localeCompare(b)
+    (a, b) => a.localeCompare(b),
   );
 
   const categoryInfo = categories.reduce((acc: Categories, val) => {
@@ -25,31 +25,30 @@ export const getStaticPaths = (async ({ paginate }) => {
   const pathsRoot = paginate(posts, {
     pageSize: 8,
     params: { category: undefined },
-    props: { categories: categoryInfo, isRoot: true }
-  })
+    props: { categories: categoryInfo, isRoot: true },
+  });
 
   // Filtered post routes byte category for /blog/[category]/[page]
   const pathsCategory = [...new Set(categories)].flatMap((category) => {
     const categoryPosts = posts.filter((post) =>
-      post.data.categories.includes(category)
+      post.data.categories.includes(category),
     );
     return paginate(categoryPosts, {
       pageSize: 8,
-      params: { category: category},
+      params: { category: category },
       props: { categories: categoryInfo, isRoot: false },
     });
   });
 
-  return [...pathsRoot, ...pathsCategory]
-
+  return [...pathsRoot, ...pathsCategory];
 }) satisfies GetStaticPaths;
 
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 const { page, categories, isRoot } = Astro.props;
 const params = Astro.params;
 
-const title = isRoot ? "Blog: All Posts" : `Blog: ${params.category}`
-const urlPattern = isRoot ? `/blog/{}` : `/blog/${params.category}/{}`
+const title = isRoot ? "Blog: All Posts" : `Blog: ${params.category}`;
+const urlPattern = isRoot ? `/blog/{}` : `/blog/${params.category}/{}`;
 ---
 
 <LayoutBlog title={title} categories={categories}>
