--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,8 +1,5 @@
 ---
-import type {
-  InferGetStaticPropsType,
-  GetStaticPaths,
-} from "astro";
+import type { InferGetStaticPropsType, GetStaticPaths } from "astro";
 import { getCollection } from "astro:content";
 
 import Layout from "@layouts/Layout.astro";
@@ -27,7 +24,7 @@ const { post } = Astro.props;
 
 <Layout title={post.data.title}>
   <main>
-    <Post post={post} summary={false}></Post>
+    <Post post={post} summary={false} />
   </main>
 </Layout>
 
