--- a/src/pages/blog/[...category]/[...page].astro
+++ b/src/pages/blog/[...category]/[...page].astro
@@ -1,7 +1,6 @@
 ---
 import type { InferGetStaticPropsType, GetStaticPaths } from "astro";
 import { getCollection } from "astro:content";
-// import Pagination from "@philnash/astro-pagination";
 
 import LayoutBlog from "@layouts/LayoutBlog.astro";
 import Post from "@components/Post.astro";
@@ -63,12 +62,11 @@ const urlPattern = isRoot ? `/blog/{}` : `/blog/${params.category}/{}`;
   </section>
 
   <div class="pagination">
-    <!-- <Pagination
-      page={page}
-      urlPattern={urlPattern}
-      previousLabel="« Newer"
-      nextLabel="Older »"
-    /> -->
+    <ul>
+      <li>{page.url.prev ? <a href={page.url.prev}>« Newer</a> : "« Newer"}</li>
+      <li>{page.currentPage} / {page.lastPage}</li>
+      <li>{page.url.next ? <a href={page.url.next}>Older »</a> : "Older »"}</li>
+    </ul>
   </div>
 </LayoutBlog>
 
