--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -2,7 +2,7 @@
 import type { CollectionEntry } from "astro:content";
 
 import { getEntries, render } from "astro:content";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 import PostExcerpt from "@components/PostExcerpt.astro";
 import PostImage from "@components/PostImage.astro";
 
