--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -4,7 +4,7 @@ import { getCollection } from "astro:content";
 import { getEntries } from "astro:content";
 
 import Layout from "@layouts/Layout.astro";
-import { Icon } from "astro-icon";
+import { Icon } from "astro-icon/components";
 
 export const getStaticPaths = (async () => {
   const posts = (await getCollection("posts")).sort(
