--- a/src/components/PostImage.astro
+++ b/src/components/PostImage.astro
@@ -4,17 +4,27 @@ import { Image } from "astro:assets";
 import type { CollectionEntry } from "astro:content";
 
 interface Props {
-  post: CollectionEntry<"posts">;
-  height?: number;
+    post: CollectionEntry<"posts">;
+    height?: number;
 }
 
 const { post, height } = Astro.props;
 
-const images = import.meta.glob<{default: ImageMetadata}>('/src/assets/images/category/*.jpg');
-const imageSrc = post.data.image ?? images[`/src/assets/images/category/${post.data.categories[0]}.jpg`]()
+const images = import.meta.glob<ImageMetadata>(
+    "/src/assets/images/category/*.jpg",
+    { eager: true, import: "default" },
+);
+const imageSrc =
+    post.data.image ??
+    images[`/src/assets/images/category/${post.data.categories[0]}.jpg`];
 ---
+
 <div class="post__image">
-    <Image src={imageSrc} alt={post.data.imageAlt ?? `${post.data.categories[0]} post category image`} />
+    <Image
+        src={imageSrc}
+        alt={post.data.imageAlt ??
+            `${post.data.categories[0]} post category image`}
+    />
 </div>
 
 <style define:vars={{ height }}>
